fix pagination button overflow

--- a/app/assets/stylesheets/application/components/listing.scss
+++ b/app/assets/stylesheets/application/components/listing.scss
@@ -19,6 +19,7 @@
     width: 100%;
     height: 100%;
     border: none;
+    overflow: hidden;
   }
 
   &--small {
